[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_ldsc2002"
version = "0.0.2"
authors = [
  { name="Example Author", email="san20226@uvg.edu.gt" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"